# agentic-agile-authoring-fork

./: README.md  mkdocs.yml  pyproject.toml
agents-roo/agentic-agile-authoring/: roo.yaml
docs/: architecture.md  index.md
docs/img/: architecture.drawio
src/agentic_agile_authoring/: cli.py
